Container/Kubernetes/k3s-soniiit/InfluxDB2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb-service
  namespace: monitoring
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/port: '8086'
spec:
  selector:
    app: influxdb
  type: NodePort
  ports:
    - port: 8086
      targetPort: 8086
      nodePort: 30086
