Container/Kubernetes/k3s-soniiit/InfluxDB2/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: influxdb
  namespace: monitoring
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`influxdb.home.soniiit.net`)
      kind: Rule
      services:
        - name: influxdb-service
          port: 8086
  tls:
    secretName: home-soniiit-net-selfsigned-tls
